@@ -76,7 +76,7 @@ x^4 - 113*x^3 - 1872*x^2 - 6208*x + 8192
 [0, 0]
 [-32/5*x^5 + 8*x^3 - 8/5*x, -32*x^4 - 64*x^3 - 40*x^2 - 8*x]
 -32/5*x^5 + 8*x^3 - 8/5*x
-32*x^4 - 64*x^3 + 40*x^2 - 8*x
+-32*x^4 - 64*x^3 - 40*x^2 - 8*x
 [[[-5; -1; -1], Mat(1), -5, Vecsmall([1])], [[0, 0; -1, 0; 0, -1], [-1, 0; 0
 , -1], 1, Vecsmall([2, 3])]]
 1
@@ -158,4 +158,7 @@ x^4 - 113*x^3 - 1872*x^2 - 6208*x + 8192
 
 [0 0 0  144 -60  25]
 
-Total time spent: 1124
+1
+1
+0
+Total time spent: 1127
